# umod-player

./: .gitignore  CMakeLists.txt  readme.rst
cmake/: compiler_flags.cmake  toolchain_gba.cmake  toolchain_sdl2.cmake
doc/: FMODDOC.TXT  it.txt  xm_errata.txt
doc/original/: convert.sh
gba_example/: Makefile
gba_example/source/: main.c
licenses/: cc-by-4.0.txt  mit.txt
licenses/sfx/: airvent_large_loop.txt  helicopter.txt
packer/: CMakeLists.txt  file.c  instruments.c  instruments.h  main.c  mod.c  mod.h  patterns.c  patterns.h  save_header.c  save_header.h  save_pack.c  save_pack.h  song.c  song.h  wav.c  wav.h
player/: CMakeLists.txt  Makefile
player/include/umod/: umod.h  umodpack.h
player/source/: CMakeLists.txt  definitions.h  global.c  global.h  mixer_channel.c  mixer_channel.h  mod_channel.c  mod_channel.h  player.c  player.h  sound_effect.c  sound_effect.h
player/source/gba/: CMakeLists.txt
player/source/host/: CMakeLists.txt
renderer/: CMakeLists.txt  main.c  wav_utils.c
tests/: CMakeLists.txt
tests/cmake/: runcommands.cmake  test.cmake
tests/mod/: CMakeLists.txt  arpeggio.mod  arpeggio.wav.tar.bz  cut_note.mod  cut_note.wav.tar.bz  delay_note.wav.tar.bz  empty_fields.mod  empty_fields.wav.tar.bz  jump_to_pattern.wav.tar.bz  jump_to_pattern_plus_pattern_break.wav.tar.bz  panning.wav.tar.bz  pattern_break.mod  pattern_break.wav.tar.bz  porta_to_note.wav.tar.bz  porta_up_down.wav.tar.bz  range_test.wav.tar.bz  retrigger_note.wav.tar.bz  sample_offset.mod  sample_offset.wav.tar.bz  sample_that_loops.wav.tar.bz  sample_with_finetune.wav.tar.bz  speed.wav.tar.bz  tremolo.mod  tremolo.wav.tar.bz  tremolo_waveform.wav.tar.bz  vibrato.mod  vibrato.wav.tar.bz  vibrato_waveform.mod  vibrato_waveform.wav.tar.bz  volume.wav.tar.bz  volume_slide.wav.tar.bz
tests/sfx/: CMakeLists.txt
tests/sfx/basic/: CMakeLists.txt  main.c  reference.wav.tar.bz
tests/sfx/frequency/: main.c  reference.wav.tar.bz
tests/sfx/invalid/: main.c  reference.wav.tar.bz
tests/sfx/loops/: main.c  reference.wav.tar.bz
tests/sfx/released/: CMakeLists.txt  main.c  reference.wav.tar.bz
tests/sfx/volume/: CMakeLists.txt  main.c  reference.wav.tar.bz
utils/: CMakeLists.txt  file.c  file.h  wav_utils.h
